# API_detect_tools

./: .codex-review-ui-refresh.diff  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CHANGELOG.md  CLAUDE.md  PROJECT_INDEX.md  README.md  build-tauri.bat  current_diff.txt  diff_api_service.txt  eslint.config.mjs  generate_modern_icon.py  index.html  package-lock.json  package.json  run-mac.sh  setup.bat  tailwind.config.cjs  tailwind.config.js  test-crypto.cjs  tmp-duckcoding-home.html  tsconfig.json  tsconfig.main.json  v2.1.9_api_service.txt  vite.config.mts  vite.config.ts  vitest.config.mts  vitest.config.ts
.claude/: settings.local.json
.codex/: config.toml
.github/workflows/: build.yml
.playwright-mcp/: page-2026-04-03T08-44-36-036Z.yml
.tmp-vitest-credit/: credit-settings.json
.trae/documents/: 优化“控制台导入”流程（独立入口与校验）.md  修复主题启动时总是跟随系统的问题.md  进一步优化与排查“控制台导入”与编辑界面.md
.trellis/: .template-hashes.json
docs/: API_REFERENCE.md  API_RESPONSES.md  ARCHITECTURE.md  CLI_COMPATIBILITY_RESEARCH.md  CLI_COMPAT_TEST_RESEARCH.md  CLI_CONFIG_PRIORITY_RESEARCH.md  ClaudeCode_Codex_Gemini_CLI.md  DEVELOPMENT.md  METAPI_SITE_DETECTION_REFERENCE.md  USER_GUIDE.md  login-flow.md  ui-preview.html
docs/cli_config_template/: cc_config_template.md  codex_config_template.md  gemini_cli_config_template.md
scripts/: dev-cleanup.cjs  dev-main.cjs  dev.cjs  migrate-config-v224-to-v301.cjs  repair-legacy-accounts.cjs  run-node-module.cjs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: main.rs
(+512 files in other folders)
